# capi-gain-ctrl-ares

./: ReadMe.txt
acdb/: acdb_cal.acdb  acdb_cal.acdbdelta  control_tx_module_api.xml  gain_module_api.xml  kvh2xml.xml  workspaceFile.qwsp
acdb/so/signed/: Elfsigner_log.txt
capi-ctrl/: CMakeLists.txt  README.md  capi_entry_functions.c
capi-ctrl/api/: control_tx_module_api.h
capi-ctrl/capi/inc/: capi_control_tx.h
capi-ctrl/capi/src/: capi_control_tx.c  capi_control_tx_utils.c  capi_control_tx_utils.h
capi-ctrl/cmn/api/: imcl_control_tx_api.h
capi-ctrl/lib/inc/: gain_lib.h
capi-ctrl/spf/incs/api/apm/: apm_graph_properties.h
capi-ctrl/spf/incs/api/ar_utils/: ar_error_codes.h  ar_guids.h  ar_ids.h  spf_begin_pack.h  spf_begin_pragma.h  spf_end_pack.h
capi-ctrl/spf/incs/api/ar_utils/hexagon/sim/: ar_msg.h
capi-ctrl/spf/incs/api/modules/: codec_metadata_api.h  common_enc_dec_api.h  imcl_fwk_intent_api.h  media_fmt_api.h  media_fmt_api_basic.h  metadata_api.h  module_cmn_api.h
capi-ctrl/spf/incs/core/api/services/: assert.h
capi-ctrl/spf/incs/gpr/platform/qurt/osal/api/: ar_osal_types.h
capi-ctrl/spf/incs/lst/: audiodynsymbols.lst
capi-ctrl/spf/incs/platform/core_drv/prm_drv/cdc_ctrl_util/inc/: audio_hw_cdc_reg_cfg.h  cdc_ctrl_util.h
capi-ctrl/spf/incs/platform/core_drv/prm_drv/cdc_ctrl_util/src/: cdc_ctrl_util.c  cdc_ctrl_util_i.h  cdc_ctrl_util_island.c
capi-ctrl/spf/incs/platform/posal/: hexagon.min
capi-ctrl/spf/incs/platform/posal/inc/: .posal_memorymap.h.swp  posal_bufpool.h  posal_channel.h  posal_data_log.h  posal_globalstate.h  posal_interrupt.h  posal_island.h  posal_memory.h  posal_memorymap.h  posal_mutex.h  posal_queue.h  posal_signal.h  posal_thread.h  posal_timer.h
capi-ctrl/spf/incs/platform/posal/inc/hexagon/: posal_intrinsics.h
capi-ctrl/spf/incs/platform/posal/src/: posal_bufpool_i.h  posal_mutex.c
capi-ctrl/spf/incs/spf/interfaces/module/capi/: algo_logging.h  capi_events.h  capi_fwk_extns_frame_duration.h  capi_fwk_extns_island.h  capi_intf_extn_data_port_operation.h  capi_intf_extn_imcl.h  capi_intf_extn_metadata.h  capi_intf_extn_prop_is_rt_port_property.h  capi_intf_extn_prop_port_ds_state.h  capi_lib_capi_process_thread.h  capi_lib_get_capi_module.h  capi_properties.h  capi_types.h
capi-ctrl/spf/incs/spf/interfaces/module/capi/adv/: capi_fwk_extns_pcm.h  capi_fwk_extns_soft_pause.h  capi_fwk_extns_soft_timer.h  capi_fwk_extns_sync.h  capi_fwk_extns_voice_delivery.h  (+2 more)
capi-ctrl/spf/incs/spf/interfaces/module/capi_cmn/: hexagon.min
capi-ctrl/spf/incs/spf/utils/list/src/: spf_list_utils.c  spf_list_utils_i.h  spf_list_utils_island.c
capi-ctrl/spf/incs/spm/api/: imcl_decimate_api.h  imcl_spm_intent_api.h
capi-ctrl/spf/libs/capi_utils_props/: hexagon.min
capi-ctrl/spf/libs/posal_utils/: hexagon.min
capi-ctrl/spf/libs/posal_utils/inc/: posal_utils.h
capi-ctrl/spf/libs/posal_utils/src/: posal_utils.cpp
capi-ctrl/spf/libs/sensor_utils/: README.md  hexagon.min  readme.txt
capi-ctrl/spf/libs/sensor_utils/inc/: sensor_events.h
capi-ctrl/spf/test/test_capi/: Makefile  hexagon.min  hexagon_deps.min  pak
capi-ctrl/spf/test/test_capi/inc/: amdb_stub.h  capi_entry_function_externs.h  capi_test.h  capi_test_utils.h  customer.h
capi-ctrl/spf/test/test_capi/src/: capi_test.cpp  capi_test_utils.cpp
capi-gain-ctrl/: CMakeLists.txt  capi_entry_functions.c  readme.txt
capi-gain-ctrl/api/: gain_module_api.h
capi-gain-ctrl/capi/inc/: capi_gain.h
capi-gain-ctrl/capi/src/: capi_gain.c  capi_gain_utils.c  capi_gain_utils.h  gain_lib.c
capi-gain-ctrl/cmn/api/: imcl_gain_api.h
capi-gain-ctrl/lib/src/: gain_lib.c
capi-gain-ctrl/spf/incs/api/ar_utils/: ar_defs.h  spf_end_pragma.h
capi-gain-ctrl/spf/incs/api/modules/: audio_hw_cdc_reg_cfg_api.h  detection_cmn_api.h  media_fmt_api_ext.h
capi-gain-ctrl/spf/incs/gpr/platform/qurt/osal/api/: ar_osal_error.h
capi-gain-ctrl/spf/incs/platform/core_drv/prm_drv/cdc_ctrl_util/: hexagon.min
capi-gain-ctrl/spf/incs/platform/posal/: Makefile
capi-gain-ctrl/spf/incs/platform/posal/inc/: posal.h  posal_atomic.h  posal_cache.h  posal_condvar.h  posal_heapmgr.h  posal_nmutex.h  posal_std.h  posal_types.h
capi-gain-ctrl/spf/incs/platform/posal/src/: posal_bufpool.c  posal_mutex_island.c
capi-gain-ctrl/spf/incs/spf/interfaces/module/audio_cmn_lib/: shared_aud_cmn_lib.h
capi-gain-ctrl/spf/incs/spf/interfaces/module/capi/: capi.h  capi_fwk_extns_bt_codec.h  capi_fwk_extns_container_frame_duration.h  capi_fwk_extns_multi_port_buffering.h  capi_fwk_extns_signal_triggered_module.h  capi_fwk_extns_thresh_cfg.h  capi_fwk_extns_trigger_policy.h  capi_lib_get_imc.h  capi_lib_mem_mapper.h
capi-gain-ctrl/spf/incs/spf/interfaces/module/capi/adv/: capi_fwk_extns_container_proc_duration.h  capi_fwk_extns_dm.h  capi_fwk_extns_ecns.h  capi_fwk_extns_smart_sync.h  capi_intf_extn_path_delay.h  capi_intf_extns_vocoder.h
capi-gain-ctrl/spf/incs/spf/interfaces/module/capi_cmn/inc/: capi_cmn.h  capi_cmn_ctrl_port_list.h  capi_cmn_imcl_utils.h
capi-gain-ctrl/spf/incs/spf/interfaces/module/capi_cmn/src/: capi_cmn.c  capi_cmn_imcl_utils_island.c
capi-gain-ctrl/spf/incs/spf/utils/cmn/: hexagon.min
capi-gain-ctrl/spf/incs/spf/utils/cmn/inc/: spf_ref_counter.h
capi-gain-ctrl/spf/incs/spf/utils/cmn/src/: spf_ref_counter.c
capi-gain-ctrl/spf/incs/spf/utils/list/: hexagon.min
capi-gain-ctrl/spf/incs/spf/utils/list/inc/: spf_list_utils.h
capi-gain-ctrl/spf/incs/spm/common/internal_api/imcl/api/: imcl_dam_detection_api.h
capi-gain-ctrl/spf/libs/capi_utils_props/: hexagon_deps.min
capi-gain-ctrl/spf/libs/capi_utils_props/inc/: capi_utils_props.h
capi-gain-ctrl/spf/libs/capi_utils_props/src/: capi_utils_props.c
capi-gain-ctrl/spf/libs/posal_utils/src/: posal_stub.cpp
capi-gain-ctrl/spf/libs/sensor_utils/src/: sensor_stub.cpp
capi-gain-ctrl/spf/test/test_capi/: all.pak
capi-gain-ctrl/spf/test/test_capi/inc/: capi_diag.h  gen_topo_metadata.h  new_capi_test.h  stringl.h
capi-gain-ctrl/spf/test/test_capi/src/: capi_unit_test.cpp  gen_topo_metadata.c  memscpy.c  memsmove.c
(+8 files in other folders)
